# easyGifMaker

./: .gitignore  README.md  pyproject.toml
assets/: test_2.png.license
examples/composite_project/: project.json
examples/rotate_project/: project.json
examples/timing_project/: project.json
src/easygifmaker/: __main__.py  app.py  cli.py  exceptions.py
src/easygifmaker/core/: __init__.py  animation.py  builder.py  exporter.py  loader.py  project.py  schemas.py
tests/: test_gif.py
