# SPDX-FileCopyrightText: 2026 Dan Terry <dan@danielterry.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "easygifmaker"
version = "0.2.0"
description = "Create animated GIFs from PNGs with transforms"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "natsort>=8.4.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
]

[project.scripts]
easygifmaker = "easygifmaker:app.main"
easygifmaker_cli = "easygifmaker:cli.main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
